--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,58 @@
 .cell {
-	width: 50px;
-	height: 50px;
+	width: 20px;
+	height: 20px;
 	background-color: blue;
-	border: 1px solid cyan;
-	color: white;
+	border: 1px solid black;
+	color: transparent;
+	line-height: 22px;
+	text-align: center;
 }
 
 .row {
 	display: inline-block;
+}
+
+.open_water {
+	background-color: #2b81af;
+}
+
+.safe_zone {
+	background-color: cyan;
+}
+
+.rock {
+	background-color: darkgray;
+	color: black;
+}
+
+.whirlpool {
+	background-color: yellow;
+}
+
+.me {
+	background-color: lime;
+}
+
+.north {
+    border-top: 1px solid white;
+}
+
+.east {
+    border-right: 1px solid white;
+}
+
+.west {
+    border-left: 1px solid white;
+}
+
+.south {
+    border-bottom: 1px solid white;
+}
+
+.cannon_ball {
+	color: white;
+}
+
+.player_1 {
+    background-color: mediumpurple;
 }
